# ur_dual_calibration

./: LICENSE  README.md
scripts/: archive_calibration.py  auto_calibrate.py  capture_dataset_dual.py  capture_sample.py  detect_aruco_once.py  export_handeye_yaml.py  extract_poses_from_samples.py  run_handeye.py  validate_handeye.py
ur_dual_calibration/: CMakeLists.txt  package.xml
ur_dual_calibration/config/: calibration_poses.yaml  handeye.yaml
ur_dual_calibration/launch/: publish_handeye.launch.py
